# mvBayesPy

./: .gitignore  CHANGES.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: friedman_demo.py  simu_demo.py
mvBayes/: __init__.py  cov.py  cv.py  mvBayes.py
tests/: test_basisSetup.py  test_bass_fit.py  test_mvBayes.py
